blocks/popup/popup.css
.popup {
  background-color: rgba(0, 0, 0, .5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0;
  z-index: -2;
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  z-index: 1;
  opacity: 0;
}

